--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "node-sass": "^4.0.0",
     "react": "^16.12.0",
     "react-bulma-components": "^3.4.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-social-login-buttons": "^3.1.0"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
-    "typescript": "4.0"
+    "typescript": "^4.0"
   },
   "license": "MIT"
 }
