--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
+    "test": "jest --watch",
+    "test:ci": "jest --ci",
     "type-check": "tsc"
   },
   "dependencies": {
@@ -13,13 +15,22 @@
     "node-sass": "^4.0.0",
     "react": "^16.12.0",
     "react-bulma-components": "^3.4.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-social-login-buttons": "^3.1.0"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.12.7",
+    "@types/enzyme": "^3.10.8",
+    "@types/jest": "^26.0.19",
     "@types/node": "^12.12.21",
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
-    "typescript": "4.0"
+    "babel-jest": "^26.6.3",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
+    "enzyme-to-json": "^3.6.1",
+    "jest": "^26.6.3",
+    "typescript": "^4.0"
   },
   "license": "MIT"
 }
