--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "node-sass": "^4.0.0",
     "react": "^16.12.0",
     "react-bulma-components": "^3.4.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-simple-chatbot": "^0.6.1",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
