--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "bulma": "^0.9.1",
+    "firebase": "^8.2.1",
+    "firebase-admin": "^9.4.2",
     "next": "latest",
     "next-auth": "^3.1.0",
     "node-sass": "^4.0.0",
@@ -18,7 +20,6 @@
     "react-social-login-buttons": "^3.1.0"
   },
   "devDependencies": {
-    "@types/next-auth": "^3.1.18",
     "@types/node": "^12.12.21",
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
