Fixed User interface to now use module augmentation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
     "target": "esnext",
     "typeRoots": [
       "./node_modules/@types",
-      "./types/"
+      "./types/",
+      "./interfaces/"
     ]
   },
   "exclude": ["node_modules"],
