--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@types/next-auth": "^3.1.18",
     "bulma": "^0.9.1",
     "firebase": "^8.2.1",
     "firebase-admin": "^9.4.2",
@@ -20,7 +21,6 @@
     "react-social-login-buttons": "^3.1.0"
   },
   "devDependencies": {
-    "@types/next-auth": "./types/next-auth",
     "@types/node": "^12.12.21",
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
