--- a/package.json
+++ b/package.json
@@ -5,7 +5,15 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
+    "sync-dotenv-slack": "envbot",
     "type-check": "tsc"
+  },
+  "envbot": {
+    "channel": "envbottest",
+    "include": [
+      "*",
+      "!SECRET"
+    ]
   },
   "dependencies": {
     "bulma": "^0.9.1",
@@ -14,7 +22,8 @@
     "react": "^16.12.0",
     "react-bulma-components": "^3.4.0",
     "react-dom": "^16.12.0",
-    "react-social-login-buttons": "^3.1.0"
+    "react-social-login-buttons": "^3.1.0",
+    "sync-dotenv-slack": "git+https://github.com/SHPE-UTDallas/sync-dotenv-slack.git"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
