--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "bulma": "^0.9.1",
     "next": "latest",
     "node-sass": "^4.0.0",
