--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "with-typescript",
   "version": "1.0.0",
   "scripts": {
-    "dev": "next",
+    "dev": "cross-env NODE_OPTIONS='--inspect' next",
     "build": "next build",
     "start": "next start",
     "type-check": "tsc"
   },
   "dependencies": {
     "bulma": "^0.9.1",
+    "firebase": "^8.2.1",
+    "firebase-admin": "^9.4.2",
     "next": "latest",
+    "next-auth": "^3.1.0",
     "node-sass": "^4.0.0",
     "react": "^16.12.0",
     "react-bulma-components": "^3.4.0",
@@ -17,9 +20,11 @@
     "react-social-login-buttons": "^3.1.0"
   },
   "devDependencies": {
+    "@types/next-auth": "^3.1.18",
     "@types/node": "^12.12.21",
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
+    "cross-env": "^7.0.3",
     "typescript": "^4.0"
   },
   "license": "MIT"
