--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@fullcalendar/common": "^5.5.0",
     "@fullcalendar/core": "^5.5.0",
     "@fullcalendar/daygrid": "^5.5.0",
+    "@fullcalendar/google-calendar": "^5.5.0",
     "@fullcalendar/interaction": "^5.5.0",
     "@fullcalendar/react": "^5.5.0",
     "@fullcalendar/timegrid": "^5.5.0",
     "@zeit/next-css": "^1.0.1",
     "babel-plugin-transform-require-ignore": "^0.1.1",
     "bulma": "^0.9.1",
+    "googleapis": "39",
     "next": "latest",
     "next-transpile-modules": "^4.1.0",
     "node-sass": "^4.0.0",
