added a link to the project repos in the TechTeamProjects.json and used it in the TechProject component

--- a/data/TechTeamProjects.json
+++ b/data/TechTeamProjects.json
@@ -2,12 +2,14 @@
     {
         "name": "ResumeBook",
         "description": "A catalog of Resume from all of our members. Used by sponsors for recruitment",
-        "image": "/imgs/officers/president.jpg"
+        "image": "/imgs/officers/president.jpg",
+        "repo": "https://github.com/SHPE-UTDallas/ResumeBook.git"
     },
     {
         "name": "Website-Redeseign",
         "description": "Redesign of the chapter's website (you're in it right now!)",
-        "image": "/imgs/officers/president.jpg"
+        "image": "/imgs/officers/president.jpg",
+        "repo": "https://github.com/SHPE-UTDallas/Website-Redesign.git"
     }
    
 ]
