--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-brands-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "bulma": "^0.9.1",
     "firebase": "^8.2.1",
     "firebase-admin": "^9.4.2",
