added a temporary image for the website redesign project (modified TechTeamProjects.json)

--- a/data/TechTeamProjects.json
+++ b/data/TechTeamProjects.json
@@ -8,7 +8,7 @@
     {
         "name": "Website-Redeseign",
         "description": "Redesign of the chapter's website (you're in it right now!)",
-        "image": "/imgs/officers/president.jpg",
+        "image": "/imgs/projects/WebsiteHomepage.PNG",
         "repo": "https://github.com/SHPE-UTDallas/Website-Redesign.git"
     }
    
