Fixed typo in TechTeamProjects.json
Co-authored-by: Gabriel Flynn <gm.flynn99@yahoo.com>

--- a/data/TechTeamProjects.json
+++ b/data/TechTeamProjects.json
@@ -6,7 +6,7 @@
     "repo": "https://github.com/SHPE-UTDallas/ResumeBook"
   },
   {
-    "name": "Website-Redeseign",
+    "name": "Website-Redesign",
     "description": "Reimplementation of the chapter's website with more modern technologies. New design places a heavier emphasis on being more user-friendly and useful for members.",
     "image": "/imgs/projects/WebsiteHomepage.PNG",
     "repo": "https://github.com/SHPE-UTDallas/Website-Redesign"
