--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dev": "cross-env NODE_OPTIONS='--inspect' next",
     "build": "next build",
     "start": "next start",
+    "export": "next export",
     "type-check": "tsc"
   },
   "dependencies": {
