--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^16.12.0",
     "react-bulma-components": "^3.4.0",
     "react-dom": "^16.12.0",
+    "react-pdf": "^5.3.0",
     "react-social-login-buttons": "^3.1.0"
   },
   "devDependencies": {
