--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dev": "cross-env NODE_OPTIONS='--inspect' next",
     "build": "next build",
     "start": "next start",
+    "export": "next export",
     "type-check": "tsc"
   },
   "dependencies": {
@@ -20,7 +21,6 @@
     "react": "^16.12.0",
     "react-bulma-components": "^3.4.0",
     "react-dom": "^16.12.0",
-    "react-pdf": "^5.3.0",
     "react-social-login-buttons": "^3.1.0"
   },
   "devDependencies": {
